src/components/PageTools/NavBar/NavBar.module.css
.container {
  display: flex;
  justify-content: space-between;
  align-items: stretch;
  width: 100%;
}

.burgerMenu {
  cursor: pointer;
  font-size: 2rem;
  margin-left: 1.5rem;
}

.dropdownMenu {
  position: fixed; /* Fixed position */
  top: 0;
  left: 0;
  width: 100%; /* Full width */
  height: auto; /* Full height */
  background-color: white; /* White background */
  opacity: 10;
  z-index: 9999; /* High z-index so it goes over everything else */
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.dropdownMenu a {
  border-bottom: 1px solid #ddd;
  text-align: center;
}

.closeMenu {
  cursor: pointer;
  position: absolute;
  right: 15px;
  font-size: 2rem;
}

.nav {
  color: black;
  margin-top: 1rem;
}



.Home,
.contactMe {
  border-bottom: 2px solid white;
  border-top: 2px solid white;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0 2rem;
}

.Home {
  border-right: 2px solid white;
  border-left: 2px solid #f0f0f0;
}

.contactMe {
  border-left: 2px solid white;
  border-right: 2px solid #f0f0f0;
  position: relative;  /* Make this a positioned element */
}

.contactMe::after {
  content: "";
  position: absolute;
  top: 33%;  /* Distance from the bottom of the text */
  left: 53%;  /* Center horizontally */
  transform: translateX(-50%);  /* Centering adjustment */
  width: 43%;  /* Width of the rectangle */
  height: 40%;  /* Height of the rectangle */
  background-color: #D3F136;  /* Background color of the rectangle */
  z-index: -1;  /* Adjust z-index if required */
}

.links {
  flex: 1; /* Let this item take up all available space */
  border-bottom: 2px solid white;
  border-top: 2px solid white;
  align-self: stretch; /* Make the element take the entire height of its parent */
  align-items: center; /* Vertically align items */
}

.nav_a_shrink {
  font-size: smaller; /* You can adjust this to your needs */
  padding-left: 1rem; /* Reduce padding */
}

.nav ul {
  margin: 0;
  list-style: none;
  display: flex;
}

.nav a {
  color: inherit;
  text-decoration: none;
  font-size: larger;
  font-weight: bolder;
}

.nav li.hover {
  background-color: #777;
}

.nav li.active {
  background-color: #555;
}

.aboutMeLink {
  display: flex;
  align-items: center;
  text-decoration: none;
  color: inherit;
  width: auto;
  height: 50px;
  margin: 0.5rem 1rem;
}

/* Adjustments for small screen */
@media (max-width: 779px) {
  .nav {
    flex-direction: column;
    align-items: flex-start;
  }

  .Home,
  .contactMe,
  .links {
    flex: 1;
    width: 100%;
    text-align: center;
  }

  .nav ul {
    flex-direction: column;
    align-items: flex-start;
    margin-left: 1rem;
    margin-bottom: 0.4rem;
  }

  .nav li {
    margin: 0.3rem 0;
  }

  .dropdownMenu {
    display: block;
  }

  .nav_ul {
    display: none; /* Hide the list */
    margin: 0;
    padding: 0;
  }
}

/* Media Query specifically for 750px to 1134px screen widths */
@media (min-width: 780px) and (max-width: 1135px) {
  .nav {
    width: 100%;
    display: inline-block;
    font-size: smaller;
  }

  .Home,
  .contactMe,
  .links {
    font-size: smaller;
    padding: 0.5rem 0;
  }

  .Home,
  .contactMe {
    flex: 15%; /* Changed from width: 15%; */
  }

  .links {
    flex: 70%; /* Changed from width: 70%; */
  }

  .nav li {
    padding-left: 3rem;
  }

  .nav li {
    padding-left: 0.5rem; /* Reduce padding */
  }

  .aboutMeLink {
    height: 0.1rem;
    width: 30%;
  }

  .nav ul {
    padding-left: 4rem;
    gap: 1rem;
  }
}

/* Large Screen (more than 1134px) */
@media (min-width: 1135px) {
  .nav {
    display: flex;
  }

  .nav_a {
    display: inline;
  }

  .links {
    display: flex;
    overflow: auto;
  }

  .nav ul {
    padding-left: 4rem;
    gap: 1rem;
  }

  .nav li {
    padding-left: 3rem;
  }
}

